# nebuia-embs

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh  nebuia-ctl
src/: config.rs  handlers.rs  main.rs  routes.rs  state.rs
src/models/: database.rs
src/repositories/: document_repository.rs  mod.rs  storage_repository.rs
src/services/: cache_service.rs  embedding_service.rs  mod.rs  nats_consumer.rs  pdf_service.rs
