[package]
name = "nebuia-embs"
version = "0.1.0"
edition = "2021"

[dependencies]
crane-core = { path = "../Crane/crane-core" }

# HTTP
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# S3 / MinIO
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-types = "1"

# NATS
async-nats = "0.38"
futures-util = "0.3"

# Compression
zstd = "0.13"

# Cache
moka = { version = "0.12", features = ["future"] }

# Utils
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
candle-core = "0.9.2-alpha.2"
half = "2"
bytes = "1"

[features]
default = []
cuda = ["crane-core/cuda"]
flash-attn = ["cuda", "crane-core/flash-attn"]
